--- a/Education/Teacher/Style/StyleCommonTeacher.css
+++ b/Education/Teacher/Style/StyleCommonTeacher.css
@@ -571,7 +571,7 @@ a img {
 }
 
 .article img, img.article, .block img, .footer img {
-    margin: 30px 15px -5px 0;
+    margin: 0px 0px 0px 0px;
 }
 
 .metadata-icons img {
